hamburger menu added

--- a/apple.html
+++ b/apple.html
@@ -9,9 +9,17 @@
 </head>
 
 <body class="body">
+  
+  <!--NAVIGATION BAR-->
   <nav class="navbar">
     <div class="logo">
       <img src="images/logo.png" alt="logo">
+    </div>
+
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
 
     <ul class="nav-links">
@@ -63,8 +71,8 @@
           <img src="images/img-11.png" alt="iPhone 17 Pro Max" class="img">
           <h3>iPhone 17 Pro Max (512GB)</h3>
           <p class="price">LKR 530,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">12GB ram and Apple A19 Pro (3 nm)<br>48MP main & 18MP front camera
+            <br>iOS 26, upgradable to iOS 26.2<br>4823mAh battery 45W wired & 25W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -72,8 +80,8 @@
           <img src="images/img-12.png" alt="iPhone 17 Pro" class="img">
           <h3>iPhone 17 Pro (256GB)</h3>
           <p class="price">LKR 379,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">12GB ram and Apple A19 Pro (3 nm)<br>48MP main & 18MP front camera
+            <br>iOS 26, upgradable to iOS 26.2<br>3998mAh battery 45W wired & 15W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -81,8 +89,8 @@
           <img src="images/img-13.png" alt="iPhone 17 Air" class="img">
           <h3>iPhone Air (256GB)</h3>
           <p class="price">LKR 320,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">12GB ram and Apple A19 Pro (3 nm)<br>48MP main & 18MP front camera
+            <br>iOS 26, upgradable to iOS 26.2<br>3149mAh battery 30W wired & 20W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -90,8 +98,8 @@
           <img src="images/img-14.png" alt="iPhone 17" class="img">
           <h3>iPhone 17 (256GB)</h3>
           <p class="price">LKR 290,000</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">8GB ram and Apple A19 (3 nm)<br>48MP main & 18MP front camera
+            <br> iOS 26, upgradable to iOS 26.2<br>3692mAh batter 30W wired & 25W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -99,8 +107,8 @@
           <img src="images/img-15.png" alt="iPhone 16 Pro Max" class="img">
           <h3>iPhone 16 Pro Max (512GB)</h3>
           <p class="price">LKR 430,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">8GB ram and Apple A18 Pro (3 nm)<br>48MP main & 12MP front camera
+            <br>iOS 18, upgradable to iOS 26.2<br>4685mAh battery 30W wired & 25W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -108,8 +116,8 @@
           <img src="images/img-16.png" alt="iPhone 16 Pro" class="img">
           <h3>iPhone 16 Pro (256GB)</h3>
           <p class="price">LKR 370,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">8GB ram and Apple A18 Pro (3 nm)<br>48MP main & 12MP front camera
+            <br>iOS 18, upgradable to iOS 26.2<br>3582mAh battery 30W wired & 22W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -117,8 +125,8 @@
           <img src="images/img-17.png" alt="iPhone 16 Plus" class="img">
           <h3>iPhone 16 Plus (128GB)</h3>
           <p class="price">LKR 249,500.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">8GB ram and Apple A18 (3 nm)<br>48MP main & 12MP front camera
+            <br>iOS 18, upgradable to iOS 26.2<br>4674mAh battery 30W wired & 25W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -126,8 +134,8 @@
           <img src="images/img-18.png" alt="iPhone 16" class="img">
           <h3>iPhone 16 (256GB)</h3>
           <p class="price">LKR 245,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">8GB ram and Apple A18 (3 nm)<br>48MP main & 12MP front camera
+            <br>iOS 18, upgradable to iOS 26.2<br>3561mAh battery 30W wired & 22W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -135,8 +143,8 @@
           <img src="images/img-19.png" alt="iPhone 16e" class="img">
           <h3>iPhone 16e (128GB)</h3>
           <p class="price">LKR 174,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">8GB ram and Apple A18 (3 nm)<br>48MP main & 12MP front camera
+            <br>iOS 18.3.1, upgradable to iOS 26.2<br>4005mAh battery 8W wired & 7.5W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -144,8 +152,8 @@
           <img src="images/img-20.png" alt="iPhone 15 Pro Max" class="img">
           <h3>iPhone 15 Pro Max (256GB)</h3>
           <p class="price">LKR 350,000</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">8GB ram and Apple A17 Pro (3 nm)<br>48MP main & 12MP front camera
+            <br>iOS 17, upgradable to iOS 26.2<br>4441mAh battery 20W wired & 15W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
