--- a/huawei.html
+++ b/huawei.html
@@ -9,9 +9,17 @@
 </head>
 
 <body class="body">
+  
+  <!--NAVIGATION BAR-->
   <nav class="navbar">
     <div class="logo">
       <img src="images/logo.png" alt="logo">
+    </div>
+
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
 
     <ul class="nav-links">
@@ -20,10 +28,10 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle">Mobile Phones ▾</a>
         <ul class="dropdown-menu">
-          <li><a href="#">Apple</a></li>
-          <li><a href="#">Samsung</a></li>
-          <li><a href="#">Huawei</a></li>
-          <li><a href="#">Honor</a></li>
+          <li><a href="apple.html" target="_blank">Apple</a></li>
+          <li><a href="samsung.html" target="_blank">Samsung</a></li>
+          <li><a href="huawei.html" target="_blank">Huawei</a></li>
+          <li><a href="honor.html" target="_blank">Honor</a></li>
         </ul>
       </li>
 
@@ -40,10 +48,10 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle">Accessories ▾</a>
         <ul class="dropdown-menu">
-          <li><a href="apple.html" target="_blank">Apple</a></li>
-          <li><a href="samsung.html" target="_blank">Samsung</a></li>
-          <li><a href="huawei.html" target="_blank">Huawei</a></li>
-          <li><a href="honor.html" target="_blank">Honor</a></li>
+          <li><a href="#">Phone Chargers</a></li>
+          <li><a href="#">Powerbanks</a></li>
+          <li><a href="#">Headphone & Airpods</a></li>
+          <li><a href="#">Others</a></li>
         </ul>
       </li>
 
@@ -63,8 +71,8 @@
           <img src="images/img-29.png" alt="Huawei Mate 80 RS Ultimate Design" class="img">
           <h3>Huawei Mate 80 RS Ultimate Design(12/512GB)</h3>
           <p class="price">LKR 520,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          <p class="desc">12GB ram and Kirin 9030 Pro (6 nm)<br>50MP main & 13MP front camera
+            <br>Harmony OS 6.0<br>6000mAh battery 100W wired & 80W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -72,8 +80,8 @@
           <img src="images/img-30.png" alt="Huawei Mate 80 Pro Max" class="img">
           <h3>Huawei Mate 80 Pro Max(16/512GB)</h3>
           <p class="price">LKR 580,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          <p class="desc">16GB ram and Kirin 9030 Pro (6 nm)<br>50MP main & 13MP front camera
+            <br>HarmonyOS 6.0<br>6000mAh battery 100W wired & 80W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -81,8 +89,8 @@
           <img src="images/img-31.png" alt="Huawei Mate 80 Pro" class="img">
           <h3>Huawei Mate 80 Pro(12/512GB)</h3>
           <p class="price">LKR 450,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          <p class="desc">12GB ram and Kirin 9030 (6 nm)<br>50MP main & 13MP front camera
+            <br>HarmonyOS 6.0<br>5750mAh battery 100W wired & 80W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -90,8 +98,8 @@
           <img src="images/img-32.png" alt="Huawei Mate 80" class="img">
           <h3>Huawei Mate 80(12/256GB)</h3>
           <p class="price">LKR 290,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          <p class="desc">12GB ram and Kirin 9020 (7 nm)<br>50MP main & 13MP front camera
+            <br>HarmonyOS 6.0<br>5750mAh battery 66W wired & 50W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -99,8 +107,8 @@
           <img src="images/img-33.png" alt="Huawei Mate X7" class="img">
           <h3>Huawei Mate X7 (16/512GB)</h3>
           <p class="price">LKR 560,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired charging
+          <p class="desc">12GB ram and Kirin 9030 Pro (6 nm)<br>50MP main & 8MP front camera
+            <br>EMUI 15 (International)<br>5600mAh battery 66W wired & 50W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -108,8 +116,8 @@
           <img src="images/img-34.png" alt="Huawei Nova 15 Pro" class="img">
           <h3>Huawei Nova 15 Pro(8/256GB)</h3>
           <p class="price">LKR 155,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">8GB ram and Kirin 9010S<br>50MP main & 50MP front camera
+            <br>HarmonyOS 6.0<br>6500mAh battery 100W wired charging
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -117,8 +125,8 @@
           <img src="images/img-35.png" alt="Huawei Nova 15 Ultra" class="img">
           <h3>Huawei Nova 15 Ultra(12/512GB)</h3>
           <p class="price">LKR 210,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">12GB ram and Kirin 9010S<br>50MP main & 50MP front camera
+            <br>HarmonyOS 6.0<br>6500mAh battery 100W wired & 50W wireless
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
@@ -126,8 +134,8 @@
           <img src="images/img-36.png" alt="Huawei Nova 15" class="img">
           <h3>Huawei Nova 15(8/256GB)</h3>
           <p class="price">LKR 140,000.00</p>
-          <p class="desc">12GB ram and Snapdragon 8 Elite<br>200MP main & 12MP front camera
-            <br>Android 15 with one UI 7<br>5000mAh battery 45W wired & 15W wireless
+          <p class="desc">8GB ram and Kirin 8020<br>50MP main & 50MP front camera
+            <br> HarmonyOS 6.0<br>6000mAh battery 100W wired charging
           </p>
           <a href="buynow.html" target="blank" class="btn">BUY NOW</a>
         </li>
