--- a/honor.html
+++ b/honor.html
@@ -9,9 +9,16 @@
 </head>
 
 <body class="body">
+  <!--NAVIGATION BAR-->
   <nav class="navbar">
     <div class="logo">
       <img src="images/logo.png" alt="logo">
+    </div>
+
+    <div class="hamburger">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
     </div>
 
     <ul class="nav-links">
@@ -20,20 +27,20 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle">Mobile Phones ▾</a>
         <ul class="dropdown-menu">
-          <li><a href="#">Apple</a></li>
-          <li><a href="#">Samsung</a></li>
-          <li><a href="#">Huawei</a></li>
-          <li><a href="#">Honor</a></li>
+          <li><a href="apple.html" target="_blank">Apple</a></li>
+          <li><a href="samsung.html" target="_blank">Samsung</a></li>
+          <li><a href="huawei.html" target="_blank">Huawei</a></li>
+          <li><a href="honor.html" target="_blank">Honor</a></li>
         </ul>
       </li>
 
       <li class="dropdown">
         <a href="#" class="dropdown-toggle">Laptops ▾</a>
         <ul class="dropdown-menu">
-          <li><a href="apple.html" target="_blank">Apple</a></li>
-          <li><a href="samsung.html" target="_blank">Samsung</a></li>
-          <li><a href="huawei.html" target="_blank">Huawei</a></li>
-          <li><a href="honor.html" target="_blank">Honor</a></li>
+          <li><a href="#">Mac</a></li>
+          <li><a href="#">Asus</a></li>
+          <li><a href="#">Acer</a></li>
+          <li><a href="#">HP</a></li>
         </ul>
       </li>
 
